--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,3 +6,8 @@ body {
 #sidebar {
     background-color: #259942 !important;
 }
+
+.bg-primary-y734 {
+    background-color: #259942 !important;
+
+}
